fix menu on small screen; force background to the back

--- a/_sass/partials/_global.scss
+++ b/_sass/partials/_global.scss
@@ -112,7 +112,7 @@ time {
         background: rgba(0, 0, 0, .2);
     }
     .st-menu-open &::after {
-        z-index: 100;
+        z-index: -1;
         width: 100%;
         height: 80%;
         transition: opacity .5s;
